# pointsplat

./: LICENSE  README.md  requirements.txt  train.py
DataGenerator/: .gitmodules  README.md  render.py  render_shapenet.py
DataGenerator/nerfstudio/: pyproject.toml
DataGenerator/nerfstudio/nerfstudio/cameras/: camera_optimizers.py  camera_utils.py
DataGenerator/nerfstudio/nerfstudio/configs/: experiment_config.py
DataGenerator/nerfstudio/nerfstudio/data/: pixel_samplers.py
DataGenerator/nerfstudio/nerfstudio/data/datamanagers/: full_images_datamanager.py
DataGenerator/nerfstudio/nerfstudio/data/dataparsers/: blender_dataparser.py  colmap_dataparser.py  nerfstudio_dataparser.py
DataGenerator/nerfstudio/nerfstudio/data/datasets/: base_dataset.py
DataGenerator/nerfstudio/nerfstudio/data/utils/: dataparsers_utils.py
DataGenerator/nerfstudio/nerfstudio/engine/: trainer.py
DataGenerator/nerfstudio/nerfstudio/models/: splatfacto.py
DataGenerator/nerfstudio/nerfstudio/pipelines/: base_pipeline.py
DataGenerator/nerfstudio/nerfstudio/utils/: eval_utils.py  writer.py
DataGenerator/scripts/gso/: 3dgs.sh  render_testset.sh
DataGenerator/scripts/objaverse/: 3dgs.sh  render_testset.sh  render_trainset.sh
DataGenerator/scripts/shapenet/: 3dgs.sh  render_testset.sh  render_trainset.sh
DataGenerator/traintest_splits/: generate_train-test.py  gso_test.txt  objaverse_test.txt  objaverse_train.txt  shapenet_test.txt  shapenet_train.txt
Pointcept/: setup.py
configs/dataset/: pp.gin  replica.gin
configs/model/: ptv3.gin
configs/train/: default.gin  defaultpp.gin
dataset/: GS.py
models/: feature_predictor.py  pointtransformer_v3.py
scripts/: test_pp.sh  test_rep.sh  train_pp.sh  train_rep.sh
utils/: gs_utils.py  metrics.py  optimizers.py
